--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
 
         <div class="icon">
-          <img src="images/download.jpg" alt="" />
+          <img src="images/download.png" alt="" />
         </div>
       </div>
     </div>
@@ -50,7 +50,7 @@
             back end developer
           </p>
         </div>
-        <img src="images/images.jpg" alt="" />
+        <img src="images/pexels-negative-space-92904.jpg" alt="" />
       </div>
     </div>
     <!-- end landing -->
@@ -60,7 +60,7 @@
         <h2>about</h2>
       </div>
       <div class="container">
-        <img src="images/images.jpg" alt="" />
+        <img src="images/resize.png" alt="" />
         <div class="text">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis ipsam
@@ -102,7 +102,7 @@
     </div>
     <!-- end our work -->
     <!-- start our skills -->
-    <div class="skills">
+    <div class="skills" id="skills">
       <div class="container">
         <h2>skills</h2>
         <div class="skill-box">
