--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             back end developer
           </p>
         </div>
-        <img src="images/pexels-negative-space-92904.jpg" alt="" />
+        <img src="images/undraw_join_re_w1lh (2).svg" alt="" />
       </div>
     </div>
     <!-- end landing -->
@@ -60,7 +60,7 @@
         <h2>about</h2>
       </div>
       <div class="container">
-        <img src="images/resize.png" alt="" />
+        <img src="images/undraw_pic_profile_re_i9i4.svg" alt="" />
         <div class="text">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis ipsam
@@ -79,25 +79,28 @@
       </div>
       <div class="container">
         <div class="box">
-          <img src="images/images.jpg" alt="" />
-          <h3>project1</h3>
-          <p>this portfolio page</p>
+          <img src="images/undraw_join_re_w1lh (2).svg" alt="" />
+          <div class="content">
+            <h3>project1</h3>
+            <p>this portfolio page</p>
+          </div>
         </div>
         <div class="box">
-          <img src="images/images.jpg" alt="" />
-          <h3>project1</h3>
-          <p>this portfolio page</p>
+          <img src="images/undraw_join_re_w1lh (2).svg" alt="" />
+          <div class="content">
+            <h3>project1</h3>
+            <p>this portfolio page</p>
+          </div>
         </div>
         <div class="box">
-          <img src="images/images.jpg" alt="" />
-          <h3>project1</h3>
-          <p>this portfolio page</p>
+          <img src="images/undraw_join_re_w1lh (2).svg" alt="" />
+          <div class="content">
+            <h3>project1</h3>
+            <p>this portfolio page</p>
+          </div>
         </div>
-        <div class="box">
-          <img src="images/images.jpg" alt="" />
-          <h3>project1</h3>
-          <p>this portfolio page</p>
-        </div>
+
+
       </div>
     </div>
     <!-- end our work -->
