--- a/index.html
+++ b/index.html
@@ -63,10 +63,8 @@
         <img src="images/undraw_pic_profile_re_i9i4.svg" alt="" />
         <div class="text">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis ipsam
-            expedita quos assumenda deleniti vel harum maiores, officia maxime,
-            dolore, dolorum quidem adipisci iure odit ipsa? Odit pariatur
-            doloribus sint?
+            i am mohammmed adel An academic student, I love programming in general, 
+            and I have experience designing websites, a set of other skills that make me special in my work
           </p>
         </div>
       </div>
@@ -144,7 +142,8 @@
 
     <!-- start footer -->
     <div class="footer" id="footer">
-      <p>Designed and developed by <span>Mohamed Adel</span></p>
+      <p>Designed and developed by <span>Mohamed Adel <i> 
+      phone number: 01550491700</i></span></p>
       <div class="Social-Media">
         <div class="link facebock">
           <i class="fa-brands fa-facebook"></i>
