--- a/index.html
+++ b/index.html
@@ -97,6 +97,20 @@
             <p>this portfolio page</p>
           </div>
         </div>
+        <div class="box">
+          <img src="images/undraw_join_re_w1lh (2).svg" alt="" />
+          <div class="content">
+            <h3>project1</h3>
+            <p>this portfolio page</p>
+          </div>
+        </div>
+        <div class="box">
+          <img src="images/undraw_join_re_w1lh (2).svg" alt="" />
+          <div class="content">
+            <h3>project1</h3>
+            <p>this portfolio page</p>
+          </div>
+        </div>
 
 
       </div>
